<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionnaire_Activity">

    <TextView
        android:id="@+id/quest_header"
        android:layout_width="313dp"
        android:layout_height="109dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/quest_header"
        android:textColor="#ED1111"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/quest_1"
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="321dp"
        android:text="@string/quest1"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/quest_2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="145dp"
        android:text="@string/quest2"
        android:textColor="#000000"
        android:textSize="18dp" />

    <Button
        android:id="@+id/down"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:text="@string/quest_button" />


</RelativeLayout>