<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forthedonor">

    <TextView
        android:id="@+id/forthedonorheader"
        android:layout_width="313dp"
        android:layout_height="109dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/forthedonorheader"
        android:textColor="#ED1111"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="40dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id='@+id/image_view'
        android:layout_width="90sp"
        android:layout_height="100sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="483dp"
        android:src="@drawable/ic_blood" />

    <TextView
        android:id="@+id/whathappend"
        android:layout_width="wrap_content"
        android:layout_height="179dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="321dp"
        android:text="@string/whathappend"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/Saveheader"
        android:layout_width="313dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="140dp"
        android:text="@string/Saveheader"
        android:textColor="#ED1111"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/Storage"
        android:layout_width="313dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="90dp"
        android:text="@string/Storage"
        android:textColor="#000000"
        android:textSize="18dp" />








</RelativeLayout>